@@ -3,17 +3,15 @@ package org.portodigital.residencia.oabpe.infra.security;
 import com.auth0.jwt.JWT;
 import com.auth0.jwt.algorithms.Algorithm;
 import com.auth0.jwt.exceptions.JWTCreationException;
-import org.portodigital.residencia.oabpe.domain.user.User;
-import org.portodigital.residencia.oabpe.domain.user.UserRepository;
-import org.portodigital.residencia.oabpe.domain.user.permission.Permission;
-import org.portodigital.residencia.oabpe.domain.user.permission.PermissionName;
-import org.portodigital.residencia.oabpe.domain.user.role.Role;
+import org.portodigital.residencia.oabpe.domain.identidade.model.User;
+import org.portodigital.residencia.oabpe.domain.identidade.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -60,30 +58,20 @@ public class TokenService {
                     .withIssuer("login-auth-api")
                     .withSubject(user.getUsername())
                     .withExpiresAt(expiration.toInstant(ZoneOffset.of("-03:00")))
-                    .withClaim("roles", getUserRoles(user))
-                    .withClaim("permissions", getUserPermissions(user))
-                    .withClaim("modules", getUserModules(user))
+                    .withClaim("permissions", getGroupedPermissions(user))
                     .sign(algorithm);
         } catch (JWTCreationException exception) {
             throw new RuntimeException("Ocorreu um erro ao realizar login. Por favor, tente novamente mais tarde.", exception);
         }
     }
 
-    private List<String> getUserRoles(User user) {
-        return user.getRoles().stream()
-                .map(Role::getName).toList();
-    }
-
-    private List<PermissionName> getUserPermissions(User user) {
+    private Map<String, List<String>> getGroupedPermissions(User user) {
         return user.getRoles().stream()
                 .flatMap(role -> role.getPermissions().stream())
-                .map(Permission::getName).toList();
-    }
-
-    private List<String> getUserModules(User user) {
-        return user.getRoles().stream()
-                .flatMap(role -> role.getPermissions().stream())
-                .map(permission -> permission.getModule().getName()).toList();
+                .collect(Collectors.groupingBy(
+                        permission -> permission.getModule().getName(),
+                        Collectors.mapping(permission -> permission.getName().name(), Collectors.toList())
+                ));
     }
 
 }
